# Robotics-Map_Localization

./: README.md
01_ros2/: README.md
01_ros2/bumperbot_ws/: README.md
01_ros2/bumperbot_ws/install/: local_setup.sh  setup.sh
01_ros2/bumperbot_ws/install/bumperbot_cpp_examples/lib/bumperbot_cpp_examples/: simple_publisher  simple_subscriber
01_ros2/bumperbot_ws/install/bumperbot_cpp_examples/share/bumperbot_cpp_examples/: package.sh  package.xml
01_ros2/bumperbot_ws/install/bumperbot_py_examples/share/bumperbot_py_examples/: package.sh
01_ros2/bumperbot_ws/log/: latest_build
01_ros2/bumperbot_ws/src/bumperbot_cpp_examples/: CMakeLists.txt
01_ros2/bumperbot_ws/src/bumperbot_cpp_examples/src/: simple_publisher.cpp  simple_subscriber.cpp
01_ros2/bumperbot_ws/src/bumperbot_description/: CMakeLists.txt  README.md  package.xml
01_ros2/bumperbot_ws/src/bumperbot_description/urdf/: bumperbot.urdf.xacro
01_ros2/bumperbot_ws/src/bumperbot_py_examples/: package.xml  setup.py
02_locomotion/: README.md
